<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bitmap_book_read_chapterlist_repeat"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/slide_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/slide_top" >

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="@dimen/dimen_70"
                android:layout_height="@dimen/dimen_70"
                android:layout_centerHorizontal="true"
                android:background="@drawable/sliding_user_head_img" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_img"
                android:layout_centerHorizontal="true"
                android:paddingTop="@dimen/dimen_15"
                android:textColor="@color/white"
                android:text="@string/guit"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/uer_layput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_15"
                android:background="@drawable/getactivationcode_btn_background_normal" >

                <TextView
                    android:id="@+id/user_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/login_in"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/login_ed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/login_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/setting_menu_bg"
                        android:orientation="horizontal"
                        android:paddingRight="@dimen/dimen_20" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/ic_logout" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/login_out"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:visibility="visible" />
                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/dimen_1"
                        android:layout_height="fill_parent"
                        android:background="@color/white" />

                    <LinearLayout
                        android:id="@+id/login_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_20"
                        android:background="@drawable/setting_menu_bg"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/ic_setting" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="@dimen/dimen_03"
                            android:text="@string/seting_str"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <net.ting.sliding.BaseListView
                android:id="@+id/setting_bottom_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/uer_layput"
                android:divider="@android:color/transparent"
                android:fadingEdge="none"
                android:paddingBottom="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_20"
                android:scrollingCache="false" >
            </net.ting.sliding.BaseListView>
            <!-- 这个list布局文件会在ListFragment中用到。 -->
        </RelativeLayout>
    </ScrollView>

</LinearLayout>